--- a/.github/workflows/x64.yml
+++ b/.github/workflows/x64.yml
@@ -19,12 +19,11 @@ env:
   REPO_BRANCH: master
   CONFIG_FILE: x64.config
   DIY_SH: diy.sh
-  FREE_UP_DISK: true
   SSH_ACTIONS: true
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   TZ: Asia/Shanghai
-  FILE_NAME: N1-Openwrt-$(date +%m%d)
+  FILE_NAME: X64-Openwrt-$(date +%m%d)
 
 jobs:
   build:
