--- a/x64.config
+++ b/x64.config
@@ -68,7 +68,7 @@ CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_docker-ce=y
 CONFIG_PACKAGE_flock=y
 CONFIG_PACKAGE_frpc=y
-CONFIG_PACKAGE_frps=y
+#CONFIG_PACKAGE_frps=y
 CONFIG_PACKAGE_fuse-utils=y
 CONFIG_PACKAGE_getopt=y
 CONFIG_PACKAGE_grub2-efi=y
